fix gap between testimonials

--- a/testimonials-grid-section-main/styles.scss
+++ b/testimonials-grid-section-main/styles.scss
@@ -160,7 +160,7 @@ footer {
 @media screen and (min-width: 64em) {
   main {
     display: grid;
-    column-gap: 1rem;
+    gap: 2rem;
     grid-template-columns: repeat(4, 1fr);
     width: 90vw;
     max-width: 100rem;
